# pro-wrestling

./: README.md
wwe_api/: .gitignore  Makefile  app.db  pyproject.toml
wwe_api/wwe_api/: const.py  db.py  loader.py  main.py  models.py  schemas.py
wwe_api/wwe_api/data/: tMatch.csv  tMove.csv  tNickname.csv  tPPV.csv  tWrestler.csv
wwe_api/wwe_api/routers/: __init__.py  nicknames.py  wrestlers.py
