[project]
name = "wwe-api"
version = "0.1.0"
description = ""
authors = [
    {name = "Atromight",email = "asimitsidellis@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
]

[tool.poetry]
packages = [{include = "wwe_api", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
