[tool.poetry]
name = "wwe-api"
version = "0.1.0"
description = "A project for managing pro wrestling data API"
authors = ["Atromight <asimitsidellis@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = ">=0.115.12,<0.116.0"
pytest = ">=8.3.5,<9.0.0"
pydantic = ">=2.0"
sqlalchemy = "^2.0.40"
aiosqlite = "^0.21.0"
pandas = "^2.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
uvicorn = {extras = ["standard"], version = "^0.34.2"}
